// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTile Snapshot tests it matches the snapshot 1`] = `
.c0 {
  cursor: pointer;
  background: white;
  position: relative;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  padding: 10px;
}

.c1 {
  position: relative;
  color: #808080;
  background: #F3F3F3;
  border-radius: 10px;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1:hover {
  background: #EEEEEE;
}

.c2 {
  width: 100%;
  max-height: 100%;
  mix-blend-mode: darken;
}

.c3 {
  width: 100%;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  bottom: 0;
  background: rgba(244,244,244,0.5);
  border-radius: 6px;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 10px 0 10px 10px;
}

.c5 {
  color: #000000;
  font-size: 10px;
}

.c6 {
  padding: 10px;
  color: #000000;
  font-size: 16px;
  font-weight: bold;
}

<div
  class="c0"
>
  <div>
    <div
      class="c1"
    >
      <img
        class="c2"
        src="src"
      />
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            loose
            : 
            12 x 1L
          </div>
        </div>
      </div>
    </div>
    <div
      class="c6"
    >
      Whipping Cream 35% 1L
    </div>
  </div>
</div>
`;

exports[`ProductTile Snapshot tests it matches the snapshot with selected = index 1`] = `
.c0 {
  cursor: pointer;
  background: white;
  position: relative;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  padding: 10px;
  padding: 28px 10px;
  margin-top: -18px;
  background: #f4f4f4;
}

.c1 {
  position: relative;
  color: #808080;
  background: #F3F3F3;
  border-radius: 10px;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1:hover {
  background: #EEEEEE;
}

.c2 {
  width: 100%;
  max-height: 100%;
  mix-blend-mode: darken;
}

.c3 {
  width: 100%;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  bottom: 0;
  background: rgba(244,244,244,0.5);
  border-radius: 6px;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 10px 0 10px 10px;
}

.c5 {
  color: #000000;
  font-size: 10px;
}

.c6 {
  padding: 10px;
  color: #000000;
  font-size: 16px;
  font-weight: bold;
}

<div
  class="c0"
>
  <div>
    <div
      class="c1"
    >
      <img
        class="c2"
        src="src"
      />
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            loose
            : 
            12 x 1L
          </div>
        </div>
      </div>
    </div>
    <div
      class="c6"
    >
      Whipping Cream 35% 1L
    </div>
  </div>
</div>
`;
